--- a/src/app/share/component/art-discussion/art-discussion.component.css
+++ b/src/app/share/component/art-discussion/art-discussion.component.css
@@ -15,14 +15,15 @@
 写评论的总体div
  */
 .write-discussion{
-  border-bottom: 1px rgb(223,223,223) solid;
   position: relative;
+  height: 80px;
 }
 /*编辑器div*/
 .discussion-editor{
   display: inline-block;
-  width: 470px;
+  width: 80%;
   font-size: 14px;
+  float: left;
 }
 /*编辑器盒子样式*/
 .editor-box{
@@ -35,19 +36,21 @@
   height: 40px;
   min-width: 55px;
   background: rgb(255,129,64);
-  float: right;
+  float: left;
+  margin-left: 10px;
 }
 /*切换表情按钮*/
 .toggle-face-btn{
   margin-left: 40px;
   margin-bottom: 10px;
   position: relative;
-  top: -10px;
+  top: -5px;
 }
 /*包裹表情和按钮的div*/
 .all-face-wrapper{
   position: relative;
   height: 40px;
+  clear: both;
 }
 /*包裹表情的div*/
 .face-wrapper{
@@ -56,7 +59,7 @@
   border: solid 1px rgb(223,223,223);
   box-shadow: 0 3px 5px rgb(203,203,203);
   padding-left: 10px;
-  top:30px;
+  top:38px;
   left: 45px;
   z-index: 12;
   width: 300px;
@@ -64,29 +67,40 @@
 
 /*显示所有评论的div*/
 .show-all-discussion{
-
+  border-top: 1px rgb(223,223,223) solid;
 }
 /*显示评论的条件*/
 .show-discussion-by{
   margin-top: 10px;
+  vertical-align:middle;
 }
 /*每一个条件*/
 .show-discussion-by span{
   font-size: 14px;
+  cursor: pointer;
+  padding-bottom:3px;
 }
-/*第一个条件*/
-.show-discussion-by span:first-child{
-  border-right: 1px solid rgb(150,150,150);
-  padding-right: 8px;
-}
+
 .show-discussion-by span:hover{
   color: rgb(255,129,64);
+}
+.sortByHr{
+  width: 0;
+  height: 20px;
+  display: inline-block;
+  position: relative;
+  top: 7px;
+  margin-left: 5px;
+  margin-right: 5px;
+  border-color: rgb(232,232,232);
 }
 /*激活的条件*/
 .active-discussion-by{
   color: black;
   font-weight: bold;
+  border-bottom: solid 1px  rgb(255,129,64);;
 }
+
 /*m每一个评论*/
 .discussion{
   margin-top: 10px;
@@ -142,14 +156,15 @@ padding-left: 40px;
 /*评论操作*/
 .discussion-operation{
   float: right;
-
 }
 
 /*操作按钮*/
 .each-operation-btn{
   height: 20px;
   width: 50px;
-  line-height: 0px;
+  line-height: 0;
+  position: relative;
+  bottom: 3px;
 }
 .each-operation-btn span{
   font-size: 12px;
@@ -165,10 +180,12 @@ padding-left: 40px;
 }
 /*回复Div包裹*/
 .reply-discussion-wrapper{
+
   margin-top: 20px;
   background: white;
   padding: 10px;
   position: relative;
+
 }
 
 .reply-textarea:focus{
@@ -196,21 +213,4 @@ padding-left: 40px;
 .discussion-to-nickname{
   font-size: 14px;
   color:rgb(255,129,64);
-}
-/*显示更多评论按钮*/
-.bottom-operation{
-  margin-top: 20px;
-  position: relative;
-}
-.show-more-discussion-btn{
-  margin: auto;
-  width: 30%;
-  display: block;
-  background: rgb(34,170,210);
-
-}
-/*关闭评论*/
-.close-discussion{
-  float: right;
-  text-decoration: underline;
 }
