--- a/src/app/share/component/reply-discussion/reply-discussion.component.css
+++ b/src/app/share/component/reply-discussion/reply-discussion.component.css
@@ -1,11 +1,14 @@
 main{
   position: relative;
+  height: 50px;
+  padding-left: 7%;
 }
 /*编辑器div*/
 .sub-discussion-editor{
   display: inline-block;
-  width: 85%;
+  width: 70%;
   font-size: 14px;
+  float: left;
 }
 /*编辑器盒子样式*/
 .editor-box{
@@ -14,23 +17,26 @@ main{
 /*发表评论按钮*/
 .send-discussion-btn{
   display: block!important;
-  width:60px;
+  width: 60px;
   height: 40px;
   min-width: 55px;
   background: rgb(128, 98, 135);
-  float: right;
+  float: left;
+  margin-left: 10px;
 }
 /*切换表情按钮*/
 .toggle-face-btn{
   margin-bottom: 10px;
   position: relative;
-  top: -10px;
-  right: 10px;
+
 }
 /*包裹表情和按钮的div*/
 .all-face-wrapper{
   position: relative;
   height: 20px;
+  clear: both;
+  float: left;
+  top: 3px;
 }
 /*包裹表情的div*/
 .face-wrapper{
@@ -39,8 +45,8 @@ main{
   border: solid 1px rgb(223,223,223);
   box-shadow: 0 3px 5px rgb(203,203,203);
   padding-left: 10px;
-  top:30px;
-  left: -3px;
+  left: 5px;
+  top: 43px;
   z-index: 12;
   width: 300px;
 }
