--- a/src/app/person-center/component/mood/mood.component.html
+++ b/src/app/person-center/component/mood/mood.component.html
@@ -1,4 +1,4 @@
-<main [@flyXInOutFromRight] >
+<main [@flyXInOutFromRight] id="mood-tab-content">
   <div id="froala-editor" class="mood-editor" [froalaEditor]="rfOptions" [(froalaModel)]="insertMood.content"></div>
   <!--编辑心情操作开始-->
   <div id="editor-operation">
