--- a/src/app/share/component/art-operation/art-operation.component.html
+++ b/src/app/share/component/art-operation/art-operation.component.html
@@ -1,7 +1,7 @@
 <!--动态操作开始-->
 <div class="all-operation" [ngClass]="{'discussOpened':artArgs.isDiscussOpen}">
   <div class="operation">
-    <span class="operation-time">7-28 18:09</span>
+    <i class="material-icons">share</i>
   </div>
   <div class="operation" mdTooltip="快收藏我">
     <i class="material-icons">favorite</i>
