--- a/src/app/register/component/register/register.component.css
+++ b/src/app/register/component/register/register.component.css
@@ -1,5 +1,6 @@
 main{
-  width: 600px;
+  padding: 10px;
+  width: 630px;
   position: relative;
   color: black;
 }
@@ -8,8 +9,8 @@ main{
   float: right;
   position: absolute;
   cursor: pointer;
-  left: 585px;
-  top: -10px;
+  left: 610px;
+
   border: none;
   outline: none;
   width: 20px;height: 20px;
@@ -19,7 +20,7 @@ main{
 #registerTitle{
   text-align: center;
   display: inline-block;
-  width: 600px;
+  width: 630px;
   padding-bottom: 10px;
   border-bottom: 1px solid rgb(202,202,202);
 }
