--- a/src/app/share/component/more-discussion/more-discussion.component.html
+++ b/src/app/share/component/more-discussion/more-discussion.component.html
@@ -1,6 +1,4 @@
-<main>
-  <app-art-discussion [artArgs]="artArgs"></app-art-discussion>
-  <md-paginator (page)="changedPage($event)"  [pageSizeOptions]="pageSizeOptions" [pageIndex]="artArgs.selectDiscussionCondition.pageIndex"
-                [length]="artArgs.discussionCount"  [pageSize]="artArgs.selectDiscussionCondition.pageSize"></md-paginator>
+<main id="more-discussion">
+  <app-art-discussion [artArgs]="args" (pageChange)="scrollToTop()"></app-art-discussion>
 </main>
 
