--- a/src/app/share/component/more-discussion/more-discussion.component.css
+++ b/src/app/share/component/more-discussion/more-discussion.component.css
@@ -1,6 +1,11 @@
 main{
   background: rgb(242,242,245);
-
   width: 100%;
   height: 100%;
+}
+.discussion-title{
+  text-align: center;
+  height: 30px;
+  font-size: 20px;
+  line-height: 30px;
 }
