--- a/src/app/share/component/more-discussion/more-discussion.component.html
+++ b/src/app/share/component/more-discussion/more-discussion.component.html
@@ -1,4 +1,5 @@
 <main id="more-discussion">
+  <p class="discussion-title">更多评论</p>
   <app-art-discussion [artArgs]="args" (pageChange)="scrollToTop()"></app-art-discussion>
 </main>
 
