--- a/src/app/foot-mark/component/my-art/my-art.component.html
+++ b/src/app/foot-mark/component/my-art/my-art.component.html
@@ -1,4 +1,5 @@
 <main class="all-my-art">
+
   <div class="art-title-wrapper">
     <span class="title-text">动态列表</span>
     <div class="art-operation-wrapper">
@@ -10,9 +11,10 @@
       </md-slide-toggle>
     </div>
   </div>
+  <div [ngBusy]="{busy:[selectNoticeSubscribe],message:'动态加载中...请稍后'}"></div>
   <div class="art-content" *ngFor="let noticeArt of showNoticeDtos">
     <app-single-art [noticeArt]="noticeArt"></app-single-art>
   </div>
-  <md-paginator  [pageSizeOptions]="pageSizeOptions"
+  <md-paginator (page)="changePage($event)"  [pageSizeOptions]="pageSizeOptions"
                 [length]="pageNotice?.totalElements" [pageSize]="selectionCondition.pageSize"></md-paginator>
 </main>
