--- a/src/app/foot-mark/component/my-art/my-art.component.css
+++ b/src/app/foot-mark/component/my-art/my-art.component.css
@@ -9,7 +9,9 @@
 /*动态头部*/
 .art-title-wrapper{
   height: 40px;
-
+  font-weight: bold;
+  font-size: 14px;
+  padding-left: 20px;
   border: 1px solid rgb(223,223,223);
   box-shadow: 0 0 3px rgb(213,213,213);
   line-height: 40px;
