--- a/src/app/person-info/component/base-info/base-info.component.css
+++ b/src/app/person-info/component/base-info/base-info.component.css
@@ -96,5 +96,5 @@ md-input-container input{
   display: block;
   width: 20%;
   margin: auto;
-  background: rgb(34,170,210);;
+  background: rgb(34,170,210);
 }
