--- a/src/app/person-center/component/album/album.component.html
+++ b/src/app/person-center/component/album/album.component.html
@@ -1,3 +1,34 @@
-<p>
-  album works!
-</p>
+
+<main class="album-main">
+  <div class="all-album-operation">
+   <button class="upload-img" md-raised-button color="primary">
+     <i class="material-icons">add_a_photo</i>
+     上传照片
+   </button>
+    <button  md-raised-button (click)="openAddAlumDialog()">
+      <i class="material-icons">add_to_photos</i>
+       创建相册
+    </button>
+
+    <button  md-raised-button >
+      <i class="material-icons">burst_mode</i>
+      相册管理
+    </button>
+  </div>
+  <div class="all-album-wrapper">
+    <app-single-album></app-single-album>
+    <app-single-album></app-single-album>
+    <app-single-album></app-single-album>
+    <app-single-album></app-single-album>
+    <app-single-album></app-single-album>
+    <app-single-album></app-single-album>
+    <app-single-album></app-single-album>
+    <app-single-album></app-single-album>
+    <app-single-album></app-single-album>
+    <app-single-album></app-single-album>
+    <app-single-album></app-single-album>
+
+
+  </div>
+</main>
+
