--- a/src/app/person-center/component/mood/mood.component.css
+++ b/src/app/person-center/component/mood/mood.component.css
@@ -193,4 +193,6 @@ md-paginator{
   margin: auto;
   margin-top: 20px;
   width: 640px;
+  border: solid 1px rgb(223,223,223);
+  box-shadow: 0 0 3px rgb(213,213,213);
 }
