--- a/src/app/person-info/component/upload-img/upload-img.component.html
+++ b/src/app/person-info/component/upload-img/upload-img.component.html
@@ -1,5 +1,7 @@
-<main><button md-dialog-close  #close style="display: none"></button>
-  <i id="close" class="material-icons" (click)="closeDialog(close)">cancel</i>
+<main>
+  <!--隐藏按钮用于,关闭dialog-->
+  <button md-dialog-close  #close style="display: none"></button>
+  <i id="close" class="material-icons" (click)="closeDialog(close)">close</i>
 
   <h3>上传头像</h3>
 
