--- a/src/app/person-center/component/album/album.component.html
+++ b/src/app/person-center/component/album/album.component.html
@@ -1,7 +1,7 @@
 
 <main class="album-main">
   <div class="all-album-operation">
-   <button class="upload-img" md-raised-button color="primary">
+   <button class="upload-img" md-raised-button color="primary" (click)="openAddPhotoDialog()">
      <i class="material-icons">add_a_photo</i>
      上传照片
    </button>
@@ -16,19 +16,7 @@
     </button>
   </div>
   <div class="all-album-wrapper">
-    <app-single-album></app-single-album>
-    <app-single-album></app-single-album>
-    <app-single-album></app-single-album>
-    <app-single-album></app-single-album>
-    <app-single-album></app-single-album>
-    <app-single-album></app-single-album>
-    <app-single-album></app-single-album>
-    <app-single-album></app-single-album>
-    <app-single-album></app-single-album>
-    <app-single-album></app-single-album>
-    <app-single-album></app-single-album>
-
-
+    <app-single-album  *ngFor="let album of albums;" [album]="album"></app-single-album>
   </div>
 </main>
 
