--- a/src/app/person-center/component/album/single-album/single-album.component.html
+++ b/src/app/person-center/component/album/single-album/single-album.component.html
@@ -1,10 +1,10 @@
 <div class="album" [@flyXInOutFromTop]>
   <div class="cover-wrapper">
-    <img class="cover-img" [src]="img">
-    <p class="album-count">123</p>
+    <img class="cover-img" [src]="this.api.IMAGE_PREFIX+album.coverImg">
+    <p class="album-count">{{album.photoCount?album.photoCount:0}}</p>
   </div>
   <div class="album-operation">
-    <span class="album-name">最爱的女孩儿1</span>
-    <i class="material-icons album-privacy">lock_outline</i>
+    <span class="album-name">{{album.albumName}}</span>
+    <i class="material-icons album-privacy" *ngIf="album.limit==0">lock_outline</i>
   </div>
 </div>
