--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,36 @@
   font-size: 13px;
   color: rgb(100,100,100);
 }
+
+/*material dialog*/
+.mat-dialog-container{
+  padding: 0!important;
+}
+
+
+/*显示更多评论面板*/
+.more-discussion-panel{
+  position: absolute;
+  height: 90%;
+  width: 60%;
+}
+/*添加相片面板*/
+.add-photo-panel{
+  width: 60%;
+  height: 70%;
+
+}
+/*dialog背景*/
+.cdk-overlay-dark-backdrop{
+  background: rgb(141, 150, 165);
+  opacity: 0.71!important;
+}
+/*字体图片*/
+i{
+  vertical-align: middle;
+}
+
+
 /*上三角形边框*/
 .top-border-triangle:before{
   box-sizing: content-box;
@@ -92,30 +122,7 @@
   margin-left: 3px;
   margin-right: 3px;
 }
-/*material dialog*/
-.mat-dialog-container{
-  padding: 0!important;
-}
-/*显示更多评论dialog*/
-.more-discussion-panel{
-  position: absolute;
-  height: 90%;
-  width: 60%;
-}
-/*基本的弹出框面板*/
-.base-dialog-panel{
-  position: absolute;
-}
 
-/*dialog背景*/
-.cdk-overlay-dark-backdrop{
-  background: rgb(141, 150, 165);
-  opacity: 0.71!important;
-}
-/*字体图片*/
-i{
-   vertical-align: middle;
- }
 
 *{
   margin: 0;
